# Adafruit_PixelDust

./: .gitignore  Adafruit_PixelDust.cpp  Adafruit_PixelDust.h  CMakeLists.txt  README.md
examples/: LED_Sand.ino
notes/: chat-gpt-1.txt  notes.md
raspberry_pi/: buttons.py  cube.cpp  demo1-snow.cpp  demo2-hourglass.cpp  demo3-logo.cpp  lis3dh.cpp  lis3dh.h  logo.h
